Version 0.4.0 Release candidate 3